Fix saving and loading of suspended reminders in KOrganizer

We need to wait for all collections to be available when restoring
reminders at startup, or they won't get loaded properly. Additionally,
we must delete reminders one by one as they are dismissed instead of
just cleaning out the config file after each startup.

BUG: 280321
FIXED-IN: 4.10
CCBUG: 146336
CCBUG: 180413
CCBUG: 302865
REVIEW: 107546